--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,14 +34,13 @@ jobs:
 
             - name: Build and release
               env:
-                  GH_TOKEN: ${{ secrets.TOKEN }}
                   # Pour repository privé, utiliser un token personnel
-                  # Ajouter GITHUB_PERSONAL_TOKEN dans les secrets du repository
-                  GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN || secrets.TOKEN }}
+                  # Ajouter PERSONAL_TOKEN dans les secrets du repository
+                  GH_TOKEN: ${{ secrets.PERSONAL_TOKEN || secrets.GITHUB_TOKEN }}
               run: npm run build-publish
 
             - name: Upload release artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                   name: release-${{ matrix.os }}
                   path: dist/
