--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiktok-live-app",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "Application desktop pour gérer TikTok Live et l'impression d'étiquettes",
   "main": "main.js",
   "scripts": {
@@ -59,7 +59,10 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ],
       "icon": "assets/icon.icns",
