🔧 Mise à jour de la configuration pour le gestionnaire de mises à jour
- Changement du dépôt GitHub de privé à public, rendant le token GitHub optionnel.
- Simplification de la logique de mise à jour en utilisant electron-updater sans authentification.
- Mise à jour de la version de l'application à 1.0.16 dans le fichier package.json.
- Ajout de support pour un serveur de mise à jour personnalisé via des variables d'environnement.

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
       "output": "dist"
     },
     "files": [
-      "**/*"
+      "**/*",
+      "!.env",
+      "!.env.*"
     ],
     "npmRebuild": false,
     "forceCodeSigning": false,
@@ -58,7 +60,7 @@
     "mac": {
       "target": [
         {
-          "target": "dmg",
+          "target": "zip",
           "arch": [
             "x64",
             "arm64"
@@ -87,8 +89,7 @@
     "publish": {
       "provider": "github",
       "owner": "Hassan-JERRAR",
-      "repo": "Tiktok_live_manager",
-      "private": true
+      "repo": "Tiktok_live_manager"
     }
   }
 }
