--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
-# Configuration pour les mises à jour OTA avec repository privé
-# Copiez ce fichier vers .env et remplissez les valeurs
+# Configuration pour TikTok Live Manager
+# Copiez ce fichier vers .env si vous avez besoin de configurations personnalisées
 
-# Token GitHub pour accéder au repository privé
-# Créer un token sur : https://github.com/settings/tokens
-# Permissions requises: repo (Full control of private repositories)
-GH_TOKEN=ghp_your_github_token_here
+# Token GitHub (optionnel - uniquement pour développement/tests)
+# Plus nécessaire depuis que le repo est public
+# GH_TOKEN=ghp_your_github_token_here
 
-# Alternative: Serveur de mise à jour personnalisé
+# Serveur de mise à jour personnalisé (optionnel)
 # UPDATE_SERVER_URL=https://your-update-server.com/updates
 # UPDATE_SERVER_TOKEN=your_server_token
 
