--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
       "target": [
         {
           "target": "zip",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
+          "arch": "x64"
+        },
+        {
+          "target": "zip",
+          "arch": "arm64"
         }
       ],
       "icon": "assets/icon.icns",
