🔧 Mise à jour de la configuration et amélioration de la gestion des mises à jour
- Ajout d'une configuration complète pour electron-updater, optimisée pour macOS dual-arch et Windows.
- Mise à jour des scripts de construction dans package.json pour supporter les architectures x64 et arm64.
- Ajout de la détection d'architecture pour macOS et configuration des entitlements.
- Mise à jour de la version de l'application à 1.0.17 dans le fichier package.json.
- Amélioration des logs pour le débogage et la traçabilité des mises à jour.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,66 @@
 # Configuration pour TikTok Live Manager
 # Copiez ce fichier vers .env si vous avez besoin de configurations personnalisées
 
-# Token GitHub (optionnel - uniquement pour développement/tests)
-# Plus nécessaire depuis que le repo est public
-# GH_TOKEN=ghp_your_github_token_here
+# ===========================================
+# CONFIGURATION DES MISES À JOUR (OBLIGATOIRE)
+# ===========================================
 
-# Serveur de mise à jour personnalisé (optionnel)
+# Token GitHub (REQUIS pour publier des releases)
+# Générer sur : https://github.com/settings/tokens
+# Permissions nécessaires : repo (full access)
+GH_TOKEN=ghp_your_github_token_here
+
+# ===========================================
+# SERVEUR DE MISE À JOUR PERSONNALISÉ (OPTIONNEL)
+# ===========================================
+
+# URL du serveur de mise à jour personnalisé
 # UPDATE_SERVER_URL=https://your-update-server.com/updates
+
+# Token d'authentification pour le serveur personnalisé
 # UPDATE_SERVER_TOKEN=your_server_token
 
-# Configuration de développement
+# ===========================================
+# CONFIGURATION DE DÉVELOPPEMENT
+# ===========================================
+
+# Environnement (development, production)
 NODE_ENV=development
+
+# Activer les logs de debug pour les mises à jour
 DEBUG_UPDATES=true
+
+# Forcer les mises à jour en mode développement
+FORCE_DEV_UPDATE_CONFIG=true
+
+# ===========================================
+# SIGNATURE ET NOTARISATION macOS (OPTIONNEL)
+# ===========================================
+
+# Détection automatique du certificat de signature
+CSC_IDENTITY_AUTO_DISCOVERY=true
+
+# Ou spécifier explicitement le nom du certificat
+# CSC_NAME="Developer ID Application: Votre Nom (TEAM_ID)"
+
+# Configuration pour la notarisation Apple
+# APPLE_ID=votre-email@example.com
+# APPLE_ID_PASSWORD=app-specific-password
+# APPLE_TEAM_ID=VOTRE_TEAM_ID
+
+# ===========================================
+# CONFIGURATION AVANCÉE
+# ===========================================
+
+# Intervalle de vérification des mises à jour (en ms)
+# Par défaut : 24h = 86400000 ms
+# UPDATE_CHECK_INTERVAL=86400000
+
+# Timeout pour les requêtes de mise à jour (en ms)
+# UPDATE_REQUEST_TIMEOUT=60000
+
+# Autoriser les pré-releases
+# ALLOW_PRERELEASE=false
+
+# Autoriser les downgrades (non recommandé)
+# ALLOW_DOWNGRADE=false
